# Simple-Event-Library

./: .gitignore  README.md  SEL.py  config.ini  pyproject.toml  test.py
SEL/: SEL.h  pyproject.toml  test.c
SEL/res/: __init__.py
SEL/res/c/: main.h
SEL/res/common/: __init__.py
SEL/res/py/: __init__.py
res/c/: main.c  main.h
res/common/: ver.txt  ver_pure.txt
res/py/: main.py
